# ffilesystem

./: .gitattributes  AGENTS.md  API.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Readme_android.md  Readme_cosmopolitan.md  Readme_cpp_stl.md  Readme_ios.md  Readme_macos.md  Readme_memory.md  cosmopolitan.cmake  coverage.cmake  ford.md  fpm.toml  ios.cmake  memcheck.cmake  meson.build  meson_options.txt  options.cmake  windows_long_paths.manifest
.archive/: ffilesystem_test.h
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ci_bsd.yml  ci_bsd.yml.bak  ci_fpm.yml  ci_lint.yml  ci_lint.yml.bak  ci_macos.yml  ci_meson.yml  ci_windows.yml  oneapi-linux.yml  oneapi-windows.yml.bak  oneapi_run_windows.bat
.github/workflows/composite-build/: action.yml
.github/workflows/composite-cmake/: action.yml
app/: CMakeLists.txt  benchmark.cpp  main.cpp
app/fortran/: main.f90
cmake/: CppCheck.cmake  FScheck.cmake  compilers.cmake  config.cmake.in  ifb.c  ifb.f90  install.cmake  iso_fortran_binding.cmake  stdcpp.cmake
cmake/fs_check/: CMakeLists.txt  main.c  main.cpp  main.f90
example/: Ffilesystem.m  WindowsLongPath.cpp  getenv_s.cpp  matlab_ffilesystem.m
example/boost/: CMakeLists.txt  boost_root.cpp
include/: ffilesystem.h
scripts/: android_run_fs_cli.sh  count_fortran_procedures.py  parent.cmake
src/: absolute.cpp  c.cpp  copy.cpp  disk.cpp  env.cpp  equivalent.cpp  executable.cpp  home.cpp  inquire.cpp  lang.cpp  lexical.cpp  limits.cpp  log.cpp  memory.cpp  mkdir.cpp  move.cpp  normalize.cpp  os.c  parent.cpp  partition.cpp  permissions.cpp  platform.cpp  pure.cpp  realpath.cpp  relative.cpp  resolve.cpp  size.cpp  space.cpp  symlink.cpp  tempdir.cpp  time.cpp  touch.cpp  ulimit.cpp  which.cpp  windows.cpp
src/extra/: case.cpp  component.cpp  cygwin.cpp  exepath.cpp  libpath.cpp  locale.cpp  owner.cpp  partition.cpp  random.cpp  removable.cpp  shell.cpp  sysctl.cpp  uid.cpp  uname.cpp  winsock.cpp
src/fortran/: filesystem.F90
test/: CMakeLists.txt  GoogleTest.cmake  adb_run.sh  android.sh  cli_exercise.txt  cli_tests.cmake  ffilesystem_test.h  ffilesystem_test.hpp  meson.build  stdin.cmake
test/core/: CMakeLists.txt  meson.build  test_OnDisk.cpp  test_absolute.cpp  test_absolute.f90  test_canonical.cpp  test_canonical.f90  test_copyfile.cpp  test_drop_slash.cpp  test_empty.cpp  test_env.cpp  test_equivalent.cpp  test_exe.cpp  test_expanduser.cpp  test_filename.cpp  test_filesize.cpp  test_hard_link.cpp  test_is_absolute.cpp  test_is_appexec_alias.cpp  test_is_char.cpp  test_is_dir.cpp  test_is_empty.cpp  test_is_fifo.cpp  test_is_file.cpp  test_is_prefix.cpp  test_is_subdir.cpp  test_join.cpp  test_memory.cpp  test_memory.f90  test_mkdir.cpp  test_normal.cpp  test_overflow.c  test_owner.cpp  test_parent.cpp  test_path_t.f90  test_permissions.cpp  test_permissions.f90  test_proximate.cpp  test_pure.cpp  test_random.cpp  (+21 more)
test/executable/: CMakeLists.txt  test_exe.cpp
test/extra/: CMakeLists.txt  meson.build  test_exepath.cpp  test_hostname.cpp  test_locale.cpp
test/libpath/: CMakeLists.txt  test_libpath.cpp
test/symlink/: CMakeLists.txt  test_is_symlink.cpp  test_is_symlink.f90  test_symlink.cpp  test_symlink.f90
